<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserMobile.GetUserMobileActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/backfull"/>
    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/quantum_black_text"
        app:layout_constraintBottom_toTopOf="@id/edtPhoneNum"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/edtPhoneNum"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtMobile"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:paddingStart="30dp"
        android:textCursorDrawable="@null"
        android:maxLength="10"
        android:layout_marginStart="15dp"
        android:inputType="number"
        android:hint="@string/enter_mobile_number"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        app:layout_constraintBottom_toBottomOf="@id/imageView5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_91"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/edtPhoneNum"
        app:layout_constraintBottom_toBottomOf="@id/edtPhoneNum"
        app:layout_constraintEnd_toStartOf="@id/edtPhoneNum"
        android:textColor="@color/quantum_black_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/edtPhoneNum"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPhoneNum"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:id="@+id/imgNext"
        />

    <TextView
        android:id="@+id/txtPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_password"
        app:layout_constraintStart_toStartOf="@id/txtMobile"
        app:layout_constraintTop_toTopOf="@id/imgNext"
        app:layout_constraintBottom_toBottomOf="@id/imgNext"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>