<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.resetPassword.ResetPasswordActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="27sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:id="@+id/txtForgotPassword"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/quantum_black_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/txtOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editOtp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/quantum_black_text"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
                android:text="Enter OTP"/>

            <TextView
                android:id="@+id/txtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/txtOtp"
                app:layout_constraintEnd_toEndOf="@id/txtOtp"
                app:layout_constraintTop_toBottomOf="@id/txtOtp"/>


            <TextView
                android:id="@+id/txtSubmitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:fontFamily="@font/clanpro_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/layoutEdtConfirmPass"
                android:background="@drawable/submit_background"/>
            <com.mukesh.OtpView
                android:id="@+id/editOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:itemCount="4"
                app:lineColor="@color/blue_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtOtp"
                />

            <TextView
                android:id="@+id/txtResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/don_t_receive_the_otp"
                app:layout_constraintTop_toBottomOf="@id/txtSubmitBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:id="@+id/txtCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:enabled="false"
                app:layout_constraintStart_toEndOf="@id/txtResend"
                app:layout_constraintTop_toTopOf="@id/txtResend"
                app:layout_constraintBottom_toBottomOf="@id/txtResend"
                android:textColor="@color/quantum_black_text"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEdtPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editOtp"
                app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:fontFamily="@font/roboto_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEdtConfirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutEdtPass"
                app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edtConfirmNewPassword"
                android:layout_width="250dp"
                android:maxLength="50"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_medium" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>